--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "voximplant-messenger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Web Messenger Application built with ReactJS/Flux and VoxImplant Web SDK",
   "main": "index.js",
   "repository": {
@@ -35,6 +35,6 @@
     "object-assign": "^2.0.0",
     "keymirror": "^0.1.1",
     "favico.js": "^0.3.8",
-    "emojify.js": "^1.0.1"
+    "emojify.js": "=1.0.1"
   }
 }
